visibility fix

--- a/src/components/css/Shared.css
+++ b/src/components/css/Shared.css
@@ -141,7 +141,6 @@
     position: relative;
     width: 100vw;
     height: 100vh;
-    opacity: 75%;
 
 }
 
